# coding-playgrounds

./: README.adoc
c-playground/: .gitignore  CMakeLists.txt  getpost.c  main.c  odbc.c
c-playground/webserver-test/: httpd-2.4.59-240404-win64-VS17.zip.asc
kotlinplayground/: build.gradle.kts  settings.gradle.kts
kotlinplayground/gradle/wrapper/: gradle-wrapper.properties
kotlinplayground/src/main/kotlin/: Main.kt
